--- a/lms/static/sass/discussion/elements/_navigation.scss
+++ b/lms/static/sass/discussion/elements/_navigation.scss
@@ -18,7 +18,7 @@
 // -----------
 .forum-nav-browse-menu-wrapper {
   border-bottom: 1px solid $forum-color-border;
-  background: theme-color("light");
+  background: $light-200;
 }
 
 .forum-nav-browse-filter {
