--- a/lms/static/sass/discussion/views/_response.scss
+++ b/lms/static/sass/discussion/views/_response.scss
@@ -146,7 +146,7 @@
 
   @include border-radius(0 0 $forum-border-radius $forum-border-radius);
 
-  background: theme-color("lightest");
+  background: $light-200;
   box-shadow: 0 1px 3px -1px $shadow inset;
 
   > li {
