--- a/lms/static/sass/discussion/views/_thread.scss
+++ b/lms/static/sass/discussion/views/_thread.scss
@@ -44,7 +44,7 @@
   display: block;
   margin-bottom: $baseline;
   font-size: $forum-x-large-font-size;
-  color: theme-color("gray-dark");
+  color: $dark;
   font-weight: 600;
 }
 
